testsuite/serd-tests/bad/bad-graph-blank-label.trig
PREFIX : <http://example/>

GRAPH [ :p :o ] { :s :p :o }
